# SateliteForestDetection

./: .gitignore  README.md  Satelite.ipynb  install.ipynb  pyproject.toml  utils.py
src/: base.py  dumper.py  exceptions.py  manager.py  misc.py
